--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -53,11 +53,11 @@
                 </Grid.RowDefinitions>
                 
                 <Button Content="Remove Mod"                    Grid.Column="0" Margin="5"/>
-                <Button Content="Refresh Mod List" Width="Auto" Grid.Column="1" Margin="5"/>
+                <Button Content="Refresh Mod List" Width="Auto" Grid.Column="1" Margin="5" Click="RefreshClick"/>
                 <Button Content="Add Mod" Width="Auto"          Grid.Column="2" Margin="5"/>
                 <!-- i want sharp bois-->
                 <!-- Wow rude-->
-                <Button Content="Save"                          Grid.Column="0" Grid.Row="1" Margin="5"/>
+                <Button Content="Save"                          Grid.Column="0" Grid.Row="1" Margin="5" Click="SaveClick"/>
                 <Button Content="Save and Play" Width="Auto"    Grid.Column="1" Grid.Row="1" Margin="5"/>
                 <Button Content="Play" Width="Auto"             Grid.Column="2" Grid.Row="1" Margin="5"/>
             </Grid>
