--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -15,24 +15,31 @@
     <Grid>
         <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,110">
             <TabItem Header="Mods">
-                <ListView x:Name="ModsList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="White">
-                    <ListView.View>
-                        <GridView>
-
-                            <GridViewColumn Header="Name" Width="120">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <CheckBox Content="{Binding Title}" IsChecked="{Binding Enabled}"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="Version"       Width="100" DisplayMemberBinding="{Binding Version}"/>
-                            <GridViewColumn Header="Author"        Width="100" DisplayMemberBinding="{Binding Author}"/>
-                            <GridViewColumn Header="Supports Save" Width="90"  DisplayMemberBinding="{Binding SupportsSave}"/>
-                            <GridViewColumn Header="Updates"       Width="70"  DisplayMemberBinding="{Binding HasUpdates}"/>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                <Grid>
+                    <ListView x:Name="ModsList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="White" Margin="0,0,31.5,0">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Name" Width="120">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Title}" IsChecked="{Binding Enabled}"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="Version"       Width="100" DisplayMemberBinding="{Binding Version}"/>
+                                <GridViewColumn Header="Author"        Width="100" DisplayMemberBinding="{Binding Author}"/>
+                                <GridViewColumn Header="Supports Save" Width="90"  DisplayMemberBinding="{Binding SupportsSave}"/>
+                                <GridViewColumn Header="Updates"       Width="70"  DisplayMemberBinding="{Binding HasUpdates}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                    <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
+                        <Button x:Name="TopBtn"      Click="MoveMod"  Content="↑" Height="50"/>
+                        <Button x:Name="UpBtn"       Click="MoveMod"  Content="^" Margin="0,5,0,0" Height="50"/>
+                        <Button x:Name="DownBtn"     Click="MoveMod"  Content="v" Margin="0,5,0,0" Height="50"/>
+                        <Button x:Name="BottomBtn"   Click="MoveMod"  Content="↓" Margin="0,5,0,0" Height="50"/>
+                    </StackPanel>
+                </Grid>
             </TabItem>
             <TabItem Header="Codes">
                 <Grid/>
