--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -34,10 +34,10 @@
                         </ListView.View>
                     </ListView>
                     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
-                        <Button x:Name="TopBtn"      Click="MoveMod"  Content="↑" Height="50"/>
-                        <Button x:Name="UpBtn"       Click="MoveMod"  Content="^" Margin="0,5,0,0" Height="50"/>
-                        <Button x:Name="DownBtn"     Click="MoveMod"  Content="v" Margin="0,5,0,0" Height="50"/>
-                        <Button x:Name="BottomBtn"   Click="MoveMod"  Content="↓" Margin="0,5,0,0" Height="50"/>
+                        <Button x:Name="TopBtn"      Click="MoveMod"  Content="↑" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="UpBtn"       Click="MoveMod"  Content="˄" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="DownBtn"     Click="MoveMod"  Content="˅" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="BottomBtn"   Click="MoveMod"  Content="↓" FontSize="30" Margin="0,5,0,0" Height="50" />
                     </StackPanel>
                 </Grid>
             </TabItem>
