--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -34,10 +34,10 @@
                         </ListView.View>
                     </ListView>
                     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
-                        <Button x:Name="TopBtn"      Click="MoveMod"  Content="↑" FontSize="30" Margin="0,5,0,0" Height="50" />
-                        <Button x:Name="UpBtn"       Click="MoveMod"  Content="˄" FontSize="30" Margin="0,5,0,0" Height="50" />
-                        <Button x:Name="DownBtn"     Click="MoveMod"  Content="˅" FontSize="30" Margin="0,5,0,0" Height="50" />
-                        <Button x:Name="BottomBtn"   Click="MoveMod"  Content="↓" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="TopBtn"      Click="UI_MoveMod_Click"  Content="↑" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="UpBtn"       Click="UI_MoveMod_Click"  Content="˄" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="DownBtn"     Click="UI_MoveMod_Click"  Content="˅" FontSize="30" Margin="0,5,0,0" Height="50" />
+                        <Button x:Name="BottomBtn"   Click="UI_MoveMod_Click"  Content="↓" FontSize="30" Margin="0,5,0,0" Height="50" />
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -60,14 +60,13 @@
                     <RowDefinition Height="0.6*"/>
                 </Grid.RowDefinitions>
                 
-                <Button Content="Remove Mod"                    Grid.Column="0" Grid.Row="0" Margin="5"/>
-                <Button Content="Refresh Mod List" Width="Auto" Grid.Column="1" Grid.Row="0" Margin="5" Click="RefreshClick"/>
-                <Button Content="Add Mod" Width="Auto"          Grid.Column="2" Grid.Row="0" Margin="5"/>
-                <!-- i want sharp bois-->
-                <!-- Wow rude-->
-                <Button Content="Save"                          Grid.Column="0" Grid.Row="1" Margin="5" Click="SaveClick"/>
-                <Button Content="Save and Play" Width="Auto"    Grid.Column="1" Grid.Row="1" Margin="5"/>
-                <Button Content="Play" Width="Auto"             Grid.Column="2" Grid.Row="1" Margin="5"/>
+                <Button Content="Remove Mod"                       Grid.Column="0" Grid.Row="0" Margin="5"/>
+                <Button Content="Refresh Mod List" Width="Auto"    Grid.Column="1" Grid.Row="0" Margin="5" Click="UI_Refresh_Click"/>
+                <Button Content="Add Mod"          Width="Auto"    Grid.Column="2" Grid.Row="0" Margin="5"/>
+                                                   
+                <Button Content="Save"                             Grid.Column="0" Grid.Row="1" Margin="5" Click="UI_Save_Click"/>
+                <Button Content="Save and Play"    Width="Auto"    Grid.Column="1" Grid.Row="1" Margin="5" Click="UI_SaveAndPlay_Click"/>
+                <Button Content="Play"             Width="Auto"    Grid.Column="2" Grid.Row="1" Margin="5" Click="UI_Play_Click"/>
             </Grid>
         </StackPanel>
     </Grid>
